make_flib11_test_g++.log
compile time:
Sat  2 Jun 22:36:08 CEST 2018

make --no-print-directory -C guiTextTest  CXX=g++
make --no-print-directory -C pixy  CXX=g++
make --no-print-directory -C fontSDF  CXX=g++
make --no-print-directory -C thickLine  CXX=g++
mkdir -p libL
mkdir -p libL
g++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
mkdir -p libL
g++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
g++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c PixyGame.cpp -o libL/PixyGame.o 
mkdir -p libL
g++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
g++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c SprEngine.cpp -o libL/SprEngine.o 
g++ -s -L ../../libLinux -o guiTextTest libL/main.o -lf -lGL -lX11 -lpthread 
g++ -s -L ../../libLinux -o thickLine libL/main.o -lf -lGL -lX11 -lpthread 
g++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c PixyEngine.cpp -o libL/PixyEngine.o 
g++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
make --no-print-directory -C tetraRot  CXX=g++
mkdir -p libL
g++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
make --no-print-directory -C shaderTest  CXX=g++
mkdir -p libL
g++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
g++ -s -L ../../libLinux -o pixyTest libL/PixyGame.o libL/SprEngine.o libL/PixyEngine.o libL/main.o -lf -lGL -lX11 -lpthread 
g++ -s -L ../../libLinux -o fontSDF libL/main.o -lf -lGL -lX11 -lpthread 
make --no-print-directory -C mandelbrot  CXX=g++
mkdir -p libL
g++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
make --no-print-directory -C computeShader  CXX=g++
mkdir -p libL
g++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
g++ -s -L ../../libLinux -o compShader libL/main.o -lf -lGL -lX11 -lpthread 
make --no-print-directory -C hexTerrain  CXX=g++
mkdir -p libL
g++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c HexTerrain.cpp -o libL/HexTerrain.o 
g++ -s -L ../../libLinux -o tetRot libL/main.o -lf -lGL -lX11 -lpthread 
g++ -s -L ../../libLinux -o mandelbrot libL/main.o -lf -lGL -lX11 -lpthread 
g++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c HexPlotter.cpp -o libL/HexPlotter.o 
g++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
g++ -s -L ../../libLinux -o shaderTest libL/main.o -lf -lGL -lX11 -lpthread 
make --no-print-directory -C treeMaker  CXX=g++
mkdir -p libL
g++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
make --no-print-directory -C singleFile  CXX=g++
make --no-print-directory -f ../../include/FRONTIER/Makefiles/fproject.mk F_CPP_FILES=testVectors.cpp EXEC=testVectors FPATH=../.. CXX=g++
mkdir -p libL
g++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c testVectors.cpp -o libL/testVectors.o 
make --no-print-directory -C spriteTest  CXX=g++
mkdir -p libL
g++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
g++ -s -L ../../libLinux -o hexTer libL/HexTerrain.o libL/HexPlotter.o libL/main.o -lf -lGL -lX11 -lpthread 
g++ -s -L ../../libLinux -o testVectors libL/testVectors.o -lf -lGL -lX11 -lpthread 
make --no-print-directory -f ../../include/FRONTIER/Makefiles/fproject.mk F_CPP_FILES=testMatrices.cpp EXEC=testMatrices FPATH=../.. CXX=g++
make --no-print-directory -f ../../include/FRONTIER/Makefiles/fproject.mk F_CPP_FILES=sdfFont.cpp EXEC=sdfFont FPATH=../.. CXX=g++
g++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c testMatrices.cpp -o libL/testMatrices.o 
g++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c sdfFont.cpp -o libL/sdfFont.o 
testMatrices.cpp: In function ‘int main()’:
testMatrices.cpp:57:38: error: call of overloaded ‘matrix(const char [3])’ is ambiguous
  cout << sm + matrix<3,3,string>("_k") << endl << endl;
                                      ^
testMatrices.cpp:57:38: note: candidates are:
In file included from ../../include/FRONTIER/System/Matrix.hpp:942:0,
                 from ../../include/FRONTIER/Graphics/Transformable.hpp:22,
                 from ../../include/FRONTIER/Graphics.hpp:40,
                 from ../../include/Frontier.hpp:17,
                 from testMatrices.cpp:1:
../../include/FRONTIER/System/Matrix.inl:63:9: note: fm::matrix<W, H, T>::matrix(fm::Delegate<T, fm::vector2<int> >) [with unsigned int W = 3u; unsigned int H = 3u; T = std::basic_string<char>]
  inline matrix<W,H,T>::matrix(fm::Delegate<T,vec2i> fun)
         ^
../../include/FRONTIER/System/Matrix.inl:40:9: note: fm::matrix<W, H, T>::matrix(const T&) [with unsigned int W = 3u; unsigned int H = 3u; T = std::basic_string<char>]
  inline matrix<W,H,T>::matrix(const T &all)
         ^
g++ -s -L ../../libLinux -o treeMaker libL/main.o -lf -lGL -lX11 -lpthread 
../../include/FRONTIER/Makefiles/fproject.mk:57: recipe for target 'libL/testMatrices.o' failed
make[2]: *** [libL/testMatrices.o] Error 1
makefile:24: recipe for target 'testMatrices' failed
make[1]: *** [testMatrices] Error 2
make[1]: *** Waiting for unfinished jobs....
make --no-print-directory -C guiLayout  CXX=g++
mkdir -p libL
g++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c ColorPicker.cpp -o libL/ColorPicker.o 
g++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
g++ -s -L ../../libLinux -o sdfFont libL/sdfFont.o -lf -lGL -lX11 -lpthread 
makefile:12: recipe for target 'singleFile' failed
make: [singleFile] Error 2 (ignored)
make --no-print-directory -C EditText  CXX=g++
mkdir -p libL
g++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
g++ -s -L ../../libLinux -o spriteTest libL/main.o -lf -lGL -lX11 -lpthread 
make --no-print-directory -C GLTest  CXX=g++
mkdir -p libL
g++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
make --no-print-directory -C kdTree  CXX=g++
mkdir -p libL
g++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
g++ -s -L ../../libLinux -o guiLayout libL/ColorPicker.o libL/main.o -lf -lGL -lX11 -lpthread 
g++ -s -L ../../libLinux -o tetRot libL/main.o -lf -lGL -lX11 -lpthread 
libL/main.o: In function `fgui::GuiEditText::updateSprites()':
main.cpp:(.text+0x15d4): undefined reference to `fgui::SpritesFromText::SpritesFromText(std::vector<fg::SpriteBase<fg::Font::Identifier>, std::allocator<fg::SpriteBase<fg::Font::Identifier> > >&, fm::String const&, fg::Glyph::Style, fg::Font, unsigned int, fgui::TextAlign, fgui::TextWrap, fm::vector2<float>&, fm::vector2<float>, fm::vector4<float>, fm::vector2<float>)'
main.cpp:(.text+0x15dc): undefined reference to `fgui::SpritesFromText::updateSprites()'
collect2: error: ld returned 1 exit status
../../include/FRONTIER/Makefiles/fproject.mk:54: recipe for target 'tetRot' failed
make[1]: *** [tetRot] Error 1
makefile:12: recipe for target 'EditText' failed
make: [EditText] Error 2 (ignored)
g++ -s -L ../../libLinux -o kdTree libL/main.o -lf -lGL -lX11 -lpthread 
g++ -s -L ../../libLinux -o GLTest libL/main.o -lf -lGL -lX11 -lpthread 
